--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="Fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
+    <meta name="keywords" content=" agence design Lyon, agences design Lyon, agence web Lyon, agences web Lyon, entreprise web design lyon, entreprises web design lyon, entreprise lyon, entreprises lyon, web design lyon, design web lyon, lyon entreprise">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
