[Index.html] Ajout d'une description
Meta description vide

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content=" agence design Lyon, agences design Lyon, agence web Lyon, agences web Lyon, entreprise web design lyon, entreprises web design lyon, entreprise lyon, entreprises lyon, web design lyon, design web lyon, lyon entreprise">
-    <meta name="description" content="">
+    <meta name="description" content="L'entreprise web design La chouette agence situé à Lyon, reconnu pour ces design novateurs et son sens du détails !">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
