--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 			<div class="container bloc-md">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+						<h2>La chouette agence</h2>
 					</div>
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
