--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
 	<!-- Principal conteneur -->
 	<div class="page-container">
-
+		<header>
 		<!-- bloc-0 -->
 		<div class="bloc bgc-white l-bloc " id="bloc-0">
 			<div class="container bloc-sm">
@@ -65,6 +65,7 @@
 				</nav>
 			</div>
 		</div>
+	</header>
 		<!-- bloc-0 END -->
 
 		<!-- bloc-1-presentation -->
@@ -259,6 +260,7 @@
 		<!-- bloc-5-cta END -->
 
 		<!-- Footer - bloc-8 -->
+		<footer>
 		<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 			<div class="container bloc-sm">
 				<div class="row">
@@ -289,7 +291,7 @@
 								</div>
 							</div>
 						</div>
-						
+			</footer>
 		<!-- Footer - bloc-8 END -->
 
 	</div>
