--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 						<img src="img/logo.png" class="center-block image-resize-mode" width="100"
 							alt="Logo La chouette agence Lyon" />
 						<h1 class="text-center hero-bloc-text tc-white ">
-							La chouette agence.
+							La chouette agence
 						</h1>
 						<div class="text-center">
 							<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
@@ -271,23 +271,23 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span> twitter</a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+									<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span> facebook</a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span> dribble</a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
 									<a class="social" href="index.html"><span
-											class="fa fa-instagram icon-md"></span></a>
+											class="fa fa-instagram icon-md"></span> instagram</a>
 								</div>
 							</div>
 						</div>
