--- a/index.html
+++ b/index.html
@@ -271,23 +271,23 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span> twitter</a>
+									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span> <p>twitter</p></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span> facebook</a>
+									<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span> <p>facebook</p></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span> dribble</a>
+									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span><p>dribble</p></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
 									<a class="social" href="index.html"><span
-											class="fa fa-instagram icon-md"></span> instagram</a>
+											class="fa fa-instagram icon-md"></span><p> instagram</p></a>
 								</div>
 							</div>
 						</div>
