--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 				<nav class="navbar row">
 					<div class="navbar-header">
-						<a class="navbar-brand" href="index.html"><a class="navbar-brand" href="index.html">
+						<a class="navbar-brand" href="index.html">
 								<img src="img/logo.svg" alt="logo agence chouette lyon" height="40" />La chouette
 								agence</a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
