--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 <body>
 	<!-- Principal conteneur -->
 	<div class="page-container">
-		<header>
+		
 		<!-- bloc-0 -->
-		<div class="bloc bgc-white l-bloc " id="bloc-0">
+		<header class="bloc bgc-white l-bloc " id="bloc-0">
 			<div class="container bloc-sm">
 
 				<nav class="navbar row">
@@ -57,8 +57,8 @@
 					</div>
 				</nav>
 			</div>
-		</div>
-	</header>
+		</header>
+
 		<!-- bloc-0 END -->
 
 		<!-- bloc-1-presentation -->
@@ -253,8 +253,8 @@
 		<!-- bloc-5-cta END -->
 
 		<!-- Footer - bloc-8 -->
-		<footer>
-		<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+		
+		<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 			<div class="container bloc-sm">
 				<div class="row">
 					<div class="col-sm-12">
@@ -283,8 +283,8 @@
 											class="fa fa-instagram icon-md"></span><p> instagram</p></a>
 								</div>
 							</div>
-						</div>
-			</footer>
+						</footer>
+		
 		<!-- Footer - bloc-8 END -->
 
 	</div>
