--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<!-- bloc-0 END -->
 
 		<!-- bloc-1-presentation -->
-		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax"
+		<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax"
 			id="bloc-1-hero">
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
@@ -79,11 +79,11 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</section>
 		<!-- bloc-1-presentation END -->
 
 		<!-- bloc-2-services -->
-		<div class="bloc bgc-white l-bloc" id="bloc-2-services">
+		<section class="bloc bgc-white l-bloc" id="bloc-2-services">
 			<div class="container bloc-md">
 				<div class="row">
 					<div class="col-sm-12 text-center">
@@ -141,11 +141,11 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</section>
 		<!-- bloc-2-services END -->
 
 		<!-- bloc-3-what-i-do -->
-		<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax"
+		<section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax"
 			id="bloc-3-what-i-do">
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace black-background">
@@ -166,11 +166,11 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</section>
 		<!-- bloc-3-what-i-do END -->
 
 		<!-- bloc-4-portfolio -->
-		<div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
+		<section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-12 text-center">
@@ -178,7 +178,7 @@
 					</div>
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
-					<div class="col-sm-6">
+					<article class="col-sm-6">
 						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
 								src="img/1.jpg"
@@ -190,8 +190,8 @@
 						<p class="text-center">
 							Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
 						</p>
-					</div>
-					<div class="col-sm-6">
+					</article>
+					<article class="col-sm-6">
 						<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
 								src="img/2.jpg" class="img-responsive portfolio-thumb"
@@ -202,10 +202,10 @@
 						<p class="text-center">
 							Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
 						</p>
-					</div>
+					</article>
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
-					<div class="col-sm-6">
+					<article class="col-sm-6">
 						<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
 								src="img/3.jpg" class="img-responsive portfolio-thumb"
@@ -217,8 +217,8 @@
 							Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les
 							articles de ce voyageur.
 						</p>
-					</div>
-					<div class="col-sm-6">
+					</article>
+					<article class="col-sm-6">
 						<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
 								src="img/4.jpg" class="img-responsive portfolio-thumb"
@@ -230,14 +230,14 @@
 							Nous avons travaillé avec cette agence pour créer un site internet permettant la
 							présentation détaillée de leurs prestations.
 						</p>
-					</div>
+					</article>
 				</div>
 			</div>
-		</div>
+		</section>
 		<!-- bloc-4-portfolio END -->
 
 		<!-- bloc-5-cta -->
-		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+		<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 			<div class="container bloc-lg">
 				<div class="row">
 					<h2 class="mg-md text-center tc-white">
@@ -249,7 +249,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</section>
 		<!-- bloc-5-cta END -->
 
 		<!-- Footer - bloc-8 -->
