--- a/contact.html
+++ b/contact.html
@@ -81,27 +81,29 @@
 			<div class="col-sm-6">
 				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 					<div class="form-group">
-						<label>
+						<label for="name">
 							Nom
-						</label>
 						<input id="name" class="form-control" required />
+					</label>
 					</div>
 					<div class="form-group">
-						<label>
+						<label for="email">
 							Adresse email
-						</label>
 						<input id="email" class="form-control" type="email" required />
+					</label>
 					</div>
 					<div class="form-group">
-						<label>
+						<label for="information">
 							Comment nous avez-vous connu ?
-						</label>
+						
 						<input class="form-control" type="email" required id="input_504" />
+					</label>
 					</div>
 					<div class="form-group">
-						<label>
+						<label for="message">
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-						</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+						<textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+					</label>
 					</div> 
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
@@ -135,29 +137,26 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span> <p>twitter</p></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span> <p>facebook</p></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span><p>dribble</p></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="index.html"><span
+									class="fa fa-instagram icon-md"></span><p> instagram</p></a>
 						</div>
 					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</footer>
+				</footer>
 <!-- Footer - bloc-8 END -->
 
 </div>
