--- a/contact.html
+++ b/contact.html
@@ -163,10 +163,12 @@
 <!-- Principal conteneur END -->
     
 
-<script src="./js/jquery-2.1.0.js"></script>
-<script src="./js/bootstrap.js"></script>
-<script src="./js/blocs.js" async></script>
-<script src="./js/jquery.touchSwipe.js" defer></script>
+<script src="./js/jquery-2.1.0.min.js" defer></script>
+	<script src="./js/bootstrap.js" defer></script>
+	<script src="./js/blocs.js" async></script>
+	<script src="./js/jquery.touchSwipe.js" defer></script>
+	<script src="./js/jqBootstrapValidation.min.js" defer></script>
+	<script src="./js/formHandler.js" defer></script>
 
 </body>
 </html>
