--- a/index.html
+++ b/index.html
@@ -290,10 +290,10 @@
 	</div>
 	<!-- Principal conteneur END -->
 
-	<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
+	<script src="./js/jquery-2.1.0.min.js" defer></script>
+	<script src="./js/bootstrap.js" defer></script>
 	<script src="./js/blocs.js" async></script>
-	<script src="./js/jquery.touchSwipe.js" defer></script>
+	<script src="./js/jquery.touchSwipe.min.js" defer></script>
 
 </body>
 
