--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 						<div class="text-center">
 							<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
-						<h3 class="mg-md text-center">
+						<h2 class="mg-md text-center">
 							Web design
-						</h3>
+						</h2>
 						<p class="text-center ">
 							Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de
 							zéro, laissez-nous vous réaliser un design dont vous serez fier.
@@ -107,9 +107,9 @@
 						<div class="text-center">
 							<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
-						<h3 class="mg-md text-center">
+						<h2 class="mg-md text-center">
 							&nbsp;Stratégie
-						</h3>
+						</h2>
 						<p class="text-center ">
 							Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre
 							vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
@@ -119,9 +119,9 @@
 						<div class="text-center">
 							<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
-						<h3 class="mg-md text-center">
+						<h2 class="mg-md text-center">
 							Illustrations
-						</h3>
+						</h2>
 						<p class="text-center ">
 							Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de
 							graphistes talentueux pour donner à vos pages une touche finale d'élégance.
@@ -206,7 +206,7 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<article class="col-sm-6">
-						<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
 								src="img/3.jpg" class="img-responsive portfolio-thumb"
 								alt="Création d'un site web pour voyageur" /></a>
@@ -219,7 +219,7 @@
 						</p>
 					</article>
 					<article class="col-sm-6">
-						<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
 								src="img/4.jpg" class="img-responsive portfolio-thumb"
 								alt="Création d'un site web pour agence de mariage" /></a>
