--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
 					<li>
 					</li>
 					<li>
-						<a href="page2.html">Contact</a>
+						<a href="contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -95,8 +95,7 @@
 					<div class="form-group">
 						<label for="information">
 							Comment nous avez-vous connu ?
-						
-						<input class="form-control" type="email" required id="input_504" />
+						<input class="form-control" type="text" required id="input_504" />
 					</label>
 					</div>
 					<div class="form-group">
