--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 						<div class="text-center">
 							<blockquote>
 								"La chouette agence est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site.
-									Cela nous a aidé à doubler nos ventes en ligne à Lyon." <br> <br> Maxime Guibard, PDG de A vos fourchettes</p> 
+									Cela nous a aidé à doubler nos ventes en ligne à Lyon." <br> <br> Maxime Guibard, PDG de A vos fourchettes
 							</blockquote>
 						</div>
 
